@@ -2,6 +2,9 @@
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Id$
 
+  27 Feb 2004; Masatomo Nakano <nakano@gentoo.org> ebuild.sh: Removed 
+  /usr/share directory in ${D} when it's empty. This should close #42312.
+
   26 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge: Added new option
   --newuse. This option is to rebuild a package whose USE has been changed.
 
